--- a/6- Regresión Lineal/REGRESION_LINEAL.ipynb
+++ b/6- Regresión Lineal/REGRESION_LINEAL.ipynb
@@ -22,7 +22,7 @@
       },
       "outputs": [],
       "source": [
-        "# EJEMPLO DE REGRESION LINEAL - DATASET DE PROPINAS"
+        "# EJEMPLO DE REGRESION LINEAL"
       ]
     },
     {
