--- a/7- KNN/KNN.ipynb
+++ b/7- KNN/KNN.ipynb
@@ -58,7 +58,7 @@
       "cell_type": "code",
       "source": [
         "knn = KNeighborsClassifier(n_neighbors=3)\n",
-        "print('Oscar Felix')\n",
+        "print('DIEGO LOPEZ')\n",
         "knn.fit(X_train, y_train)\n",
         "y_pred = knn.predict(X_test)\n",
         "accuracy = accuracy_score(y_test, y_pred)"
