--- a/9-Perceptron/PERCEPTRON.ipynb
+++ b/9-Perceptron/PERCEPTRON.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# PERCEPTRON - RED NEURONAL BASICA - OSCAR FELIX"
+        "# PERCEPTRON - RED NEURONAL BASICA"
       ],
       "metadata": {
         "id": "hlVBgVW3oycf"
